--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "email": "jeswinpk@agilehead.com"
   },
   "name": "crankshaft",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Build System.",
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
   "main": "lib",
   "dependencies": {
     "co": "*",
-    "nodefunc-promisify": "*"
+    "nodefunc-generatorify": "*"
   },
   "devDependencies": {
     "mocha": "*",
