--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   },
   "main": "lib",
   "dependencies": {
-    "co": "*",
-    "nodefunc-generatorify": "*",
-    "co-parallel-tools": "*"
+    "nodefunc-promisify": "*"
   },
   "devDependencies": {
     "mocha": "*",
