--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "nodefunc-promisify": "*"
   },
   "devDependencies": {
+    "asynctrace": "^1.5.0",
+    "babel-runtime": "^5.8.29",
+    "bluebird": "^3.0.2",
     "mocha": "*",
     "should": "*"
   },
