--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "email": "jeswinpk@agilehead.com"
   },
   "name": "crankshaft",
-  "version": "4.0.4",
+  "version": "4.0.5",
   "description": "Build System.",
   "repository": {
     "type": "git",
     "url": "https://github.com/jeswin/crankshaft.git"
   },
-  "main": "dist",
+  "main": "dist/crankshaft",
   "dependencies": {
     "babel-runtime": "*",
     "nodefunc-promisify": "*"
