Babel 6 needs preset-stage-2 for async compilation

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mocha": "*",
     "should": "*",
     "touch": "*",
-    "fs-extra": "*"
+    "fs-extra": "*",
+    "babel-preset-stage-2": "*"
   },
   "keywords": [
     "build",
