--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-    "presets": ["stage-2"]
+    "presets": ["es2015", "react", "stage-2"],
+    "plugins": [
+        "transform-es2015-modules-commonjs",
+        "transform-es2015-function-name",
+        "transform-async-to-generator"
+    ]
 }
