--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "nodefunc-promisify": "*"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*",
-    "touch": "*",
-    "fs-extra": "*",
+    "babel-plugin-transform-class-properties": "^6.2.2",
     "babel-polyfill": "*",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
-    "babel-preset-stage-2": "*"
+    "babel-preset-stage-2": "*",
+    "fs-extra": "*",
+    "mocha": "*",
+    "should": "*",
+    "touch": "*"
   },
   "keywords": [
     "build",
