--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "email": "jeswinpk@agilehead.com"
   },
   "name": "crankshaft",
-  "version": "5.1.5",
+  "version": "5.1.6",
   "description": "Build System.",
   "scripts": {
     "test": "mocha dist/test/test.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nodejam/crankshaft.git"
+    "url": "https://github.com/jeswin/crankshaft.git"
   },
   "main": "dist/crankshaft",
   "dependencies": {
