Fix tests. Update deps. Change entry point file.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "https://github.com/jeswin/crankshaft.git"
   },
-  "main": "dist/crankshaft",
+  "main": "dist/index.js",
   "dependencies": {
     "babel-runtime": "*",
     "nodefunc-promisify": "*"
