--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   },
   "main": "dist/index.js",
   "dependencies": {
-    "babel-runtime": "*",
-    "nodefunc-promisify": "*"
+    "babel-runtime": "^6.26.0",
+    "nodefunc-promisify": "^2.0.2"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.2.2",
-    "babel-polyfill": "*",
-    "babel-preset-es2015": "*",
-    "babel-preset-react": "*",
-    "babel-preset-stage-2": "*",
-    "fs-extra": "*",
-    "mocha": "*",
-    "should": "*",
-    "touch": "*"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "fs-extra": "^9.0.0",
+    "mocha": "^7.1.2",
+    "should": "^13.2.3",
+    "touch": "^3.1.0"
   },
   "keywords": [
     "build",
